# Computational_Physics_v24

./: .gitignore  README.md
Diffusion_Waves_Shock/: main.ipynb  transport_eqn.ipynb  wave_eqn.ipynb
Diffusion_Waves_Shock/src/: diffusion.jl  hopfs_eqn.jl  waves.jl
Diffusion_Waves_Shock/src/funcs/: diffusion_funcs.jl
Diffusion_Waves_Shock/src/utils/: diffusion_funcs.jl  hopfs_eqn_funcs.jl  waves_funcs.jl
Neural_Dynamics/: main.ipynb
Neural_Dynamics/data/plots/: .gitignore
Protein_Folding/: Protein_Folding.ipynb  Protein_Folding.jl  Protein_Folding_3d.jl  Protein_Folding_v2.jl  Protein_Folding_v3.jl  plotting.ipynb  plotting.jl  utils.jl
Quantum_Mechanics/: CMakeLists.txt  Quantum_Mechanics.sln
Quantum_Mechanics/Quantum_Mechanics/: Quantum_Mechanics.cpp  Quantum_Mechanics.vcxproj  Quantum_Mechanics.vcxproj.filters  functions.cpp  functions.hpp  params.cpp  testfile.csv  tridiagonal.cpp  tridiagonal.hpp
Quantum_Mechanics/Quantum_Mechanics/x64/Debug/: Quantum_Mechanics.exe.recipe  functions.obj.enc  params.obj.enc  (+3 more)
Quantum_Mechanics/data/: eigenvalues.txt  eigenvectors.txt  rawroots.txt
Quantum_Mechanics/include/: CrankNicolson.hpp  Hamiltonian.hpp  TwoLevelHamiltonian.hpp  WaveFunction.hpp  functions.hpp  params.cpp  tridiagonal.hpp
Quantum_Mechanics/prg/: CMakeLists.txt  main.cpp
Quantum_Mechanics/python/: plot.ipynb
Quantum_Mechanics/report/: main.tex
Quantum_Mechanics/src/: CMakeLists.txt  CrankNicolson.cpp  Hamiltonian.cpp  TwoLevelHamiltonian.cpp  WaveFunction.cpp  functions.cpp  tridiagonal.cpp
Quantum_Mechanics/src/python/: plot.ipynb
(+10 files in other folders)
